--- a/blocks/featured-picks/featured-picks.css
+++ b/blocks/featured-picks/featured-picks.css
@@ -146,7 +146,7 @@
 
 .featured-pick-meta {
   font-size: 12px;
-  color: #888;
+  color: #767676;
   margin-top: 4px;
   padding-top: 12px;
   border-top: 1px solid rgb(0 0 0 / 6%);
