--- a/blocks/quiz/quiz.css
+++ b/blocks/quiz/quiz.css
@@ -138,7 +138,7 @@
 .quiz .quiz-header-title {
   font-size: var(--body-font-size-xs);
   font-weight: 700;
-  color: #888;
+  color: #767676;
   text-transform: uppercase;
   letter-spacing: 1px;
 }
@@ -172,7 +172,7 @@
 .quiz .quiz-counter {
   text-align: right;
   font-size: var(--body-font-size-xs);
-  color: #888;
+  color: #767676;
   margin-bottom: 20px;
 }
 
