--- a/blocks/storybook/storybook.css
+++ b/blocks/storybook/storybook.css
@@ -373,7 +373,7 @@
 
 .storybook-indicator {
   font-size: 13px;
-  color: #888;
+  color: #767676;
   min-width: 56px;
   text-align: center;
 }
